# spotify-cli

./: Cargo.toml  README.md  test.sh
src/: auth.rs  copy.rs  debug.rs  main.rs  util.rs
src/commands/: auth.rs  debug.rs  mod.rs
src/commands/playlist/: copy.rs  mod.rs  new.rs
src/commands/playlist/sort/: sort.rs
src/commands/user/: mod.rs  top_tracks.rs
src/sort/: mod.rs  parsed_release_date.rs  sort.rs
src/spotify/: mod.rs  playlist.rs  types.rs  user.rs
