[package]
name = "spotify-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ureq = { version = "2.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
shellexpand = "3.1"
thiserror = "1.0"
