[package]
name = "spotify-cli"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"

[features]
default = ["json_export"]
json_export = ["dep:serde_json"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ureq = { version = "2.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
toml = "0.8"
shellexpand = "3.1"
thiserror = "1.0"
